// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageTrendsCountChart when fetching more data when the fetchMore query returns data passes the data to the line chart 1`] = `
Array [
  Object {
    "data": Array [
      Array [
        "2020-07-01",
        41,
      ],
      Array [
        "2020-06-01",
        22,
      ],
      Array [
        "2020-08-01",
        5,
      ],
    ],
    "name": "Mock Query",
  },
]
`;

exports[`UsageTrendsCountChart with data passes the data to the line chart 1`] = `
Array [
  Object {
    "data": Array [
      Array [
        "2020-07-01",
        41,
      ],
      Array [
        "2020-06-01",
        22,
      ],
    ],
    "name": "Mock Query",
  },
]
`;
